--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,27 +1,27 @@
 name: Build and Deploy Docker Image
 
 on:
-  workflow_dispatch
+  workflow_dispatch:
 
 jobs:
- runs-on: ubuntu-latest
+  build-and-deploy:
+    runs-on: ubuntu-latest
 
- steps: 
- - name: Checkout code
-   uses: actions/checkout@v2
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
 
- 
- - name: Build Docker image
-   run: |
-    docker build -t my-react-app .
+      - name: Build Docker image
+        run: |
+          docker build -t my-react-app .
 
- - name: Log in to Docker Hub
-   uses: docker/login-action@v1
-   with:
-    username: ${{ secrets.DOCKER_USERNAME }}
-    password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
- - name: Push Docker image to Docker Hub
-   run: |
-     docker tag my-react-app your-dockerhub-username/my-react-app:latest
-     docker push your-dockerhub-username/my-react-app:latest
+      - name: Push Docker image to Docker Hub
+        run: |
+          docker tag my-react-app your-dockerhub-username/my-react-app:latest
+          docker push your-dockerhub-username/my-react-app:latest
