--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -24,4 +24,4 @@ jobs:
       - name: Push Docker image to Docker Hub
         run: |
           docker tag my-react-app your-dockerhub-username/my-react-app:latest
-          docker push your-dockerhub-username/my-react-app:latest
+          docker push ivanovayo/my-react-app:latest
